# stark-snark-recursive-proofs

./: .gitignore  .gitmodules  Cargo.toml
circom-prover/: Cargo.toml  build.rs
circom-prover/src/: circom.rs  hash.rs  json.rs  lib.rs  utils.rs
examples/sum/: Cargo.toml
examples/sum/src/: air.rs  compile.rs  prove.rs  prover.rs  run.rs
winterfell/air/src/air/: mod.rs
winterfell/air/src/proof/: queries.rs
winterfell/crypto/src/: lib.rs
winterfell/crypto/src/hash/: mod.rs
winterfell/crypto/src/hash/poseidon/: mod.rs
winterfell/crypto/src/merkle/: proofs.rs
winterfell/fri/src/prover/: mod.rs
winterfell/math/: Cargo.toml
winterfell/math/src/: lib.rs
winterfell/math/src/field/: mod.rs
winterfell/math/src/field/f256/: mod.rs
winterfell/prover/src/: domain.rs  lib.rs
winterfell/prover/src/matrix/: row_matrix.rs
winterfell/prover/src/trace/: trace_table.rs
winterfell/prover/src/trace/trace_lde/default/: tests.rs
winterfell/verifier/src/: channel.rs  lib.rs
winterfell/winterfell/src/: lib.rs
